[gd_scene load_steps=6 format=3 uid="uid://b5wns2rx8faxl"]

[ext_resource type="Script" uid="uid://u60p14y14brn" path="res://scripts/Inventory.gd" id="1_inventory"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.25, 0.25, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.35, 0.35, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(0.35, 0.35, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_focus"]
bg_color = Color(0.25, 0.25, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.85, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inventory")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "背包"

[node name="Spacer" type="Control" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0/50"

[node name="BackButton" type="Button" parent="TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "返回大厅"

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="InventoryPanel" type="Panel" parent="MainContainer/HBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/HBoxContainer/InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/HBoxContainer/InventoryPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ToolBar" type="HBoxContainer" parent="MainContainer/HBoxContainer/InventoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SortButton" type="Button" parent="MainContainer/HBoxContainer/InventoryPanel/MarginContainer/VBoxContainer/ToolBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "整理背包"

[node name="StarterPackButton" type="Button" parent="MainContainer/HBoxContainer/InventoryPanel/MarginContainer/VBoxContainer/ToolBar"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "领取新手礼包"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/HBoxContainer/InventoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MainContainer/HBoxContainer/InventoryPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 8

[node name="ItemDetailPanel" type="Panel" parent="MainContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/HBoxContainer/ItemDetailPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "物品详情"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemName" type="Label" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "未选择物品"
horizontal_alignment = 1

[node name="ItemRarity" type="Label" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="ItemType" type="Label" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="ItemQuantity" type="Label" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="Separator2" type="HSeparator" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemDescription" type="Label" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
autowrap_mode = 3

[node name="ItemValue" type="Label" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="Spacer" type="Control" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsContainer" type="VBoxContainer" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UseButton" type="Button" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
disabled = true
text = "使用"

[node name="DiscardButton" type="Button" parent="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
disabled = true
text = "丢弃"

[connection signal="pressed" from="TopBar/MarginContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/InventoryPanel/MarginContainer/VBoxContainer/ToolBar/SortButton" to="." method="_on_sort_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/InventoryPanel/MarginContainer/VBoxContainer/ToolBar/StarterPackButton" to="." method="_on_starter_pack_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer/ButtonsContainer/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/ItemDetailPanel/MarginContainer/VBoxContainer/ButtonsContainer/DiscardButton" to="." method="_on_discard_button_pressed"]
